PCS BAckup 26Dec2023/Backup-Source/objects/Vision_Customer_Product_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Awarded_Quantity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Awarded Quantity</label>
        <referenceTo>Phoenix_Awarded_Quantity__c</referenceTo>
        <relationshipLabel>Customer Product Trackers</relationshipLabel>
        <relationshipName>Customer_Product_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_Line_Created_Date__c</fullName>
        <label>Bid Line Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bid_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Line Item</label>
        <referenceTo>Phoenix_Bid_Line_Item__c</referenceTo>
        <relationshipLabel>Customer Product Trackers</relationshipLabel>
        <relationshipName>Customer_Product_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compliance_Unique_Identifier__c</fullName>
        <formula>IF(AND(ISNULL( Vision_Contract_Number__c ), ISNULL(Vision_Product_Code__c)), null,Vision_Contract_Number__c +&quot;-&quot;+Vision_Product_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliance Unique Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Response_Effective_Date__c</fullName>
        <label>Customer Response Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Response_Line_Bid_status__c</fullName>
        <label>Customer Response Line-Bid status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Response_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Response Line</label>
        <referenceTo>Phoenix_Customer_Response_Line__c</referenceTo>
        <relationshipLabel>Customer Product Trackers</relationshipLabel>
        <relationshipName>Customer_Product_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>General_Category__c</fullName>
        <label>General Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Initial_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates whether it is initial order or not</description>
        <label>Is Initial Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Family</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Customer Product Trackers (Product Family)</relationshipLabel>
        <relationshipName>Customer_Product_Trackers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Testing_field__c</fullName>
        <label>Testing field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Account_Cooling_Period_Days__c</fullName>
        <label>Account Cooling Period Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Product Trackers</relationshipLabel>
        <relationshipName>Customer_Product_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Awarded_Date__c</fullName>
        <label>Awarded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Awarded_Price__c</fullName>
        <label>Awarded Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Awarded_Value__c</fullName>
        <label>Awarded Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Awarded_Volume__c</fullName>
        <label>Awarded Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Bid_Created_Date__c</fullName>
        <label>Bid Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_Bid_Name__c</fullName>
        <label>Bid Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Bid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid</label>
        <referenceTo>Phoenix_Bid__c</referenceTo>
        <relationshipLabel>Customer Product Trackers</relationshipLabel>
        <relationshipName>Customer_Product_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Contract_Created_Date__c</fullName>
        <label>Contract Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_Contract_Name__c</fullName>
        <label>Contract Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Contract_Product_Status__c</fullName>
        <label>Contract Product Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct</fullName>
                </value>
                <value>
                    <fullName>Indirect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>Customer Product Trackers</relationshipLabel>
        <relationshipName>Customer_Product_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Current_Contract_Position_Status__c</fullName>
        <formula>IF(  Vision_On_Contract__c , IF( Vision_Current_Product_Position__c == null, &apos;Information Missing&apos;, Vision_Current_Product_Position__c ), &apos;Not on Contract&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Contract Position Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Current_FY_Sales_YTD__c</fullName>
        <label>Current FY Sales YTD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Current_Product_Position__c</fullName>
        <label>Current Product Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Cus_Response_Lines_Created_Date__c</fullName>
        <label>Customer Response Lines Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Response_Created_Date__c</fullName>
        <label>Customer Response Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Response_Name__c</fullName>
        <label>Customer Response Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Response__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Response</label>
        <referenceTo>Phoenix_Customer_Response__c</referenceTo>
        <relationshipLabel>Customer Product Trackers</relationshipLabel>
        <relationshipName>Customer_Product_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_In_Bid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Bid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_In_CIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In CIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_In_Cooling_Period__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Cooling Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_In_Customer_Response_Lines__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Customer Response Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_In_NPR_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In NPR Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_In_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Internal_DeadNet__c</fullName>
        <label>Internal DeadNet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Internal_Unique_Identifier__c</fullName>
        <formula>IF(AND(ISNULL(Vision_Customer_Code__c), ISNULL(Vision_Product_Code__c)), null,Vision_Customer_Code__c+&quot;-&quot;+Vision_Product_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Unique Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Is_In_Awarded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is In Awarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_Price_Constraint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Price Constraint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_Product_Lost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Product Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_Relevant_to_the_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Relevant to the Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_Share_Expansion_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Share Expansion Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_Supply_Constraint__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Supply Constraint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Is_True_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is True Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_NPR_Created_Date__c</fullName>
        <label>NPR Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_NPR_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NPR Data</label>
        <referenceTo>Phoenix_NPR_Data__c</referenceTo>
        <relationshipLabel>Customer Product Trackers</relationshipLabel>
        <relationshipName>Customer_Product_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_New_Product_Addition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Product Addition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_No_Orders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_On_BackOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On BackOrder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_On_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Opportunity_Created_Date__c</fullName>
        <label>Opportunity Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Customer Product Trackers</relationshipLabel>
        <relationshipName>Customer_Product_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Quantity__c</fullName>
        <label>Order Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_PO_Number__c</fullName>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Previous_DeadNet__c</fullName>
        <label>Previous DeadNet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Previous_FY_Sales__c</fullName>
        <label>Previous FY Sales</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Previous_Volume__c</fullName>
        <label>Previous Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Price_Effective_Date__c</fullName>
        <label>Price Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Price_End_Date__c</fullName>
        <label>Price End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Created_Date__c</fullName>
        <label>Product Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Description__c</fullName>
        <label>Product Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Director__c</fullName>
        <label>Product Director</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Opportunity_Created_Date__c</fullName>
        <label>Product Opportunity Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Opportunity_Name__c</fullName>
        <label>Product Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Opportunity</label>
        <referenceTo>Product_Opportunity__c</referenceTo>
        <relationshipLabel>Customer Product Trackers</relationshipLabel>
        <relationshipName>Customer_Product_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Risks__c</fullName>
        <label>Product Risks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Customer Product Trackers</relationshipLabel>
        <relationshipName>Customer_Product_Trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Start_Of_The_Year__c</fullName>
        <formula>IF(  Vision_On_Contract__c = true, IF( DATEVALUE(Vision_NPR_Created_Date__c) &gt;= DATE(YEAR(TODAY()), 4, 1), true, false), false)</formula>
        <label>Start Of The Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Supply_Effective_Date__c</fullName>
        <label>Supply Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Unique_Identifier__c</fullName>
        <formula>Vision_Product_Code__c+&quot;_&quot;+Vision_Contract_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>category__c</fullName>
        <label>category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Customer Product Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>cus-prd-tracker-{00000}</displayFormat>
        <label>Customer Product Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Product Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>